# discord-rss-bot

./: .gitignore  Dockerfile  config.yaml  docker-compose.yml  example.feeds.yaml  feeds.yaml  pyproject.toml
src/: bot.py  config.py  feed_handler.py  logger.py  main.py  models.py
tests/src/: test_bot.py  test_feed_handler.py
